--- a/css/main.css
+++ b/css/main.css
@@ -17,25 +17,43 @@
     .container {
       width: 1170px; } }
 
+body .fa-bars:before {
+  font-size: 2rem; }
+
 body div {
   border: 1px dashed cyan; }
 
 body .nav {
   position: fixed;
-  top: 0; }
-  body .nav li {
-    list-style-type: none; }
-  @media only screen and (max-width: 767px) {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px; }
+  body .nav button {
+    position: absolute;
+    right: 0;
+    width: 50px;
+    height: 47px;
+    cursor: pointer; }
+  body .nav ul {
+    display: none; }
+    body .nav ul.open {
+      border: 1px dashed cyan;
+      display: block;
+      width: 100%;
+      position: absolute;
+      top: 49px;
+      padding: 0 100px 50px;
+      background: white;
+      overflow-y: scroll; }
+      body .nav ul.open > li {
+        height: auto;
+        text-align: center;
+        width: 100%;
+        margin: 20px 0;
+        list-style-type: none; }
+  @media (min-width: 768px) {
     body .nav ul {
-      display: none; }
-      body .nav ul.open {
-        border: 1px dashed cyan;
-        display: block;
-        width: 100vw;
-        position: absolute;
-        left: 50%;
-        right: 50%;
-        margin-left: -5vw;
-        padding: 0 100px 50px;
-        background: white;
-        overflow-y: scroll; } }
+      display: block; }
+      body .nav ul.desktop {
+        width: 100%; } }
