--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,34 +4,59 @@
 $guide: 1px dashed cyan;
 
 body {
+
+    // FONT AWESOME ICONS
+    .fa-bars {
+        &:before {
+            font-size: 2rem;
+        }
+    }
+
     div {
         border: $guide;
     }
     .nav {
         position: fixed;
         top: 0;
-         li {
-            list-style-type: none;
+        left: 0;
+        width: 100%;
+        height: 50px;
+        button {
+            position: absolute;
+            right: 0;
+            width: 50px;
+            height: 47px;
+            cursor: pointer;
         }
-
-        @include breakpoint(xsmall) {
-            ul {
-                display: none;
-                &.open {
-                    border: $guide;
-                    display: block;
-                    width: 100vw;
-                    position: absolute;
-                    left: 50%;
-                    right: 50%;
-                    margin-left: -5vw;
-                    // margin-right: -58vw;
-                    // height: 90vh;
-                    padding: 0 100px 50px;
-                    background: white;
-                    overflow-y: scroll;
+        ul {
+            display: none;
+            &.open {
+                border: $guide;
+                display: block;
+                width: 100%;
+                position: absolute;
+                top: 49px;
+                padding: 0 100px 50px;
+                background: white;
+                overflow-y: scroll;
+                
+                > li {
+                    height: auto;
+                    text-align: center;
+                    width: 100%;
+                    margin: 20px 0;
+                    list-style-type: none;
                 }
             }
-        } 
+        }
+
+        @include breakpoint(small) {
+            ul {
+                display: block;
+                &.desktop {
+                    width: 100%;
+                }
+            }
+        }
     }
 }
