--- a/css/main.css
+++ b/css/main.css
@@ -29,31 +29,42 @@ body .nav {
   left: 0;
   width: 100%;
   height: 50px; }
-  body .nav button {
-    position: absolute;
-    right: 0;
-    width: 50px;
-    height: 47px;
-    cursor: pointer; }
-  body .nav ul {
-    display: none; }
-    body .nav ul.open {
-      border: 1px dashed cyan;
-      display: block;
-      width: 100%;
+  body .nav .nav-wrapper {
+    width: 100%; }
+    body .nav .nav-wrapper button {
       position: absolute;
-      top: 48px;
-      padding: 0 100px 50px;
-      background: white;
-      overflow-y: scroll; }
-      body .nav ul.open > li {
-        height: auto;
-        text-align: center;
+      right: 0;
+      width: 50px;
+      height: 47px;
+      cursor: pointer; }
+    body .nav .nav-wrapper ul {
+      display: none; }
+      body .nav .nav-wrapper ul.open {
+        border: 1px dashed cyan;
+        display: block;
         width: 100%;
-        margin: 20px 0;
-        list-style-type: none; }
+        position: absolute;
+        top: 48px;
+        padding: 0 100px 50px;
+        background: white;
+        overflow-y: scroll; }
+        body .nav .nav-wrapper ul.open > li {
+          height: auto;
+          text-align: center;
+          width: 100%;
+          margin: 20px 0;
+          list-style-type: none; }
   @media (min-width: 768px) {
-    body .nav ul {
-      display: block; }
-      body .nav ul.desktop {
-        width: 100%; } }
+    body .nav .nav-wrapper button {
+      display: none; }
+    body .nav .nav-wrapper ul {
+      margin-top: 0;
+      margin-bottom: 0;
+      display: block;
+      text-align: center; }
+      body .nav .nav-wrapper ul li {
+        display: inline-block;
+        margin: 0 7%;
+        height: 100%;
+        position: relative;
+        bottom: 0; } }
